# Uni-O4

./: .gitattributes  .gitignore  BC_ensemble.py  CMakeLists.txt  HDF5_recorder.h  INSTALL.md  LICENSE  README.md  T265_reader.h  abppo.py  buffer.py  critic.py  dynamics_eval.py  lcm_position.cpp  main.py  net.py  normalization.py  off2on.py  ppo.py  record_obs_from_lcm.cpp  reward_aliengo_new.py  run.sh  traj_record.cpp  util.py  utils.h  utils.py
checkpoints/offline_finetuned/: value_0808.pt
checkpoints/pretrained_pi_v_2023_09_02__17_17_38/: best_bppo.csv  pi_latest.pt  value_10240.pt
configs/adroit/: default.py  pen_cloned.py  pen_human.py
configs/gym/: default.py  halfcheetah_medium.py  halfcheetah_medium_expert.py  halfcheetah_medium_replay.py  halfcheetah_random.py  hopper_medium.py  hopper_medium_expert.py  hopper_medium_replay.py  hopper_random.py  walker2d_medium.py  walker2d_medium_expert.py  walker2d_medium_replay.py  walker2d_random.py
configs/neorl/: __init__.py  halfcheetah_high.py  halfcheetah_low.py  halfcheetah_medium.py  hopper_high.py  hopper_low.py  hopper_medium.py  (+3 more)
dynamics/: __init__.py  ensemble_dynamics.py
go1_gym.egg-info/: SOURCES.txt  requires.txt  top_level.txt
go1_gym_online/: test.py
models/: dynamics_model.py  nets.py
policies/: __init__.py  mobile.py
ppo_finetune/: main.py  net.py  normalization.py  offline_buffer.py  online_buffer.py  ppo.py  utils.py
runs/: convert_to_cpu.py
scripts/: play.py  play_eval.py  train.py
utils/: buffer.py  buffer_.py  load_dataset.py  policy_trainer.py  termination_fns.py
(+379 files in other folders)
